fix spacing on home screen text hola mundo

--- a/cover.css
+++ b/cover.css
@@ -16,6 +16,7 @@
   padding-top: 30%;
   height: 100vh;
   min-height: 600px;
+  font-size: 48px;
  }
 
  #about {
@@ -65,6 +66,8 @@
    position: relative;
    display: inline-block;
    border-bottom: 1px dotted #ff5555;
+   padding-left: 10px;
+   padding-right: 10px;
  }
 
 /* TOOL TIP FOR HOME PAGE OLA */
